[package]
name = "pagegraph"
version = "0.1.0"
authors = ["Anton Lazarev <alazarev@brave.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
xml-rs = "^ 0.8"
petgraph = {git = "https://github.com/antonok-edm/petgraph", rev = "edges-undirected", version = "^ 0.5", default_features = false, features = ["graphmap"]}
adblock = "^ 0.2"
url = "^ 2.1"
addr = "^ 0.2"
rayon = "^ 1.4"

[dev-dependencies]
reqwest = "^ 0.9"
serde = { version = "^ 1.0", features = ["derive"] }
serde_json = "^ 1.0"
