[package]
name = "pagegraph-cli"
version = "0.1.0"
authors = ["Anton Lazarev <alazarev@brave.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
pagegraph = { path = "../pagegraph" }
clap = "2.33"
serde = { version = "^ 1.0", features = ["derive"] }
serde_json = "^1.0.108"
html-escape = "0.2.13"
