[package]
name = "pagegraph-cli"
version = "0.1.0"
rust-version = "1.70.0"
authors = ["Anton Lazarev <alazarev@brave.com>", "Shivan Kaul Sahib <shivan@brave.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
pagegraph = { path = "../pagegraph" }
clap = "3.2"
serde = { version = "^1.0.200", features = ["derive"] }
serde_json = "^1.0.108"
html-escape = "0.2.13"
