[package]
name = "pagegraph"
version = "0.1.2"
description = "Rust library for analyzing PageGraph files"
license-file = "../LICENSE"
authors = ["Anton Lazarev <alazarev@brave.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
xml-rs = "^ 0.8"
petgraph = "^0.6.3"
adblock = "^ 0.7"
url = "^ 2.1"
addr = "^ 0.15"
serde = { version = "^ 1.0", features = ["derive"], optional = true }

[features]
default = [ "serde" ]
