[package]
name = "pagegraph"
version = "0.1.3"
description = "Rust library for analyzing PageGraph files"
license-file = "../LICENSE"
authors = ["Anton Lazarev <alazarev@brave.com>", "Shivan Kaul Sahib <shivan@brave.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
xml-rs = "^0.8.19"
petgraph = "^0.6.4"
adblock = "^0.7"
url = "^2.5.0"
addr = "^0.15.6"
serde = { version = "^1.0.193", features = ["derive"], optional = true }

[features]
default = [ "serde" ]
